package webapp;

public class Controller {
    public static String jdbcURL = "jdbc:mysql://localhost:3306/mydb?useSSL=false";
    public static String dbUser = "root";
    public static String dbPassword = "";
}
