@startuml

title __ZTUS's Class Diagram__\n

  package  {
    package webapp {
      class AddNewCaseServlet {
      }
    }
  }
  

  package  {
    package webapp {
      class AllCasesServlet {
      }
    }
  }
  

  package  {
    package webapp {
      class AllFilesServlet {
      }
    }
  }
  

  package  {
    package webapp {
      class Case {
      }
    }
  }
  

  package  {
    package webapp {
      class Controller {
      }
    }
  }
  

  package  {
    package webapp {
      class DeleteCaseServlet {
      }
    }
  }
  

  package  {
    package webapp {
      class DeleteFileServlet {
      }
    }
  }
  

  package  {
    package webapp {
      class DownloadFileServlet {
      }
    }
  }
  

  package  {
    package webapp {
      class EditCaseDetailsServlet {
      }
    }
  }
  

  package  {
    package webapp {
      class FileCase {
      }
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    package webapp {
      class MainPageServlet {
      }
    }
  }
  

  package  {
    package webapp {
      class UploadFileServlet {
      }
    }
  }
  

  package  {
    package webapp {
      class User {
      }
    }
  }
  

  package  {
    package webapp {
      class UserDAO {
      }
    }
  }
  

  package  {
    package webapp {
      class UserLoginServlet {
      }
    }
  }
  

  package  {
    package webapp {
      class UserLogoutServlet {
      }
    }
  }
  

  AddNewCaseServlet -up-|> HttpServlet
  AllCasesServlet -up-|> HttpServlet
  AllFilesServlet -up-|> HttpServlet
  DeleteCaseServlet -up-|> HttpServlet
  DeleteFileServlet -up-|> HttpServlet
  DownloadFileServlet -up-|> HttpServlet
  EditCaseDetailsServlet -up-|> HttpServlet
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  JspClass -up-|> HttpJspPage
  MainPageServlet -up-|> HttpServlet
  UploadFileServlet -up-|> HttpServlet
  UserLoginServlet -up-|> HttpServlet
  UserLogoutServlet -up-|> HttpServlet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
